# pulsar-cli

./: Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml
src/: main.rs
